--- a/SalesWebMvc/Views/Home/About.cshtml
+++ b/SalesWebMvc/Views/Home/About.cshtml
@@ -9,3 +9,5 @@
 <address>
     <strong>More information: </strong> <a href="http://educandoweb.com.br">Educandoweb.com.br</a>
 </address>
+
+//MODIFICADO NA AULA
