--- a/SalesWebMvc/Views/Sellers/Index.cshtml
+++ b/SalesWebMvc/Views/Sellers/Index.cshtml
@@ -1,7 +1,46 @@
-﻿@{
-    ViewData["Title"] = "Index";
+﻿@model IEnumerable<SallesWebMvc.Models.Seller>
+
+@{
+    ViewData["Title"] = "Sellers";
    
 }
-<h2>Sellers</h2>
+<h2>@ViewData["Title"]</h2>
 
-<p>Sellers index page</p>
+<table class="table table-striped table-hover">
+
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model  => model.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model  => model.Email)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model  => model.BirthDate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model  => model.Base.Salary)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Email)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.BirthDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.BaseSalary)
+                </td>
+            </tr>
+        }
+    </tbody>
