--- a/SalesWebMvc/Views/Sellers/Index.cshtml
+++ b/SalesWebMvc/Views/Sellers/Index.cshtml
@@ -20,7 +20,7 @@
                 @Html.DisplayNameFor(model  => model.BirthDate)
             </th>
             <th>
-                @Html.DisplayNameFor(model  => model.Base.Salary)
+                @Html.DisplayNameFor(model  => model.BaseSalary)
             </th>
             <th></th>
         </tr>
